2022-01-19  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/std.pk (openproc): New function.
	* doc/poke.texi (openproc): New section.

2022-01-18  Luca Saiu  <positron@gnu.org>

	* bootstrap.conf (bootstrap_post_import_hook): Use the specified
	--gnulib-srcdir for boostrapping Jitter as well: redefine
	GNULIB_SRCDIR to be an absolute path, then cd to the Jitter source
	directory and pass Gnulib's absolute path to Jitter's bootstrap
	script; do not rely on a hardwired --gnulib-srcdir=../gnulib .
	(bootstrap_post_import_hook): Add missing quotations when
	expanding GNULIB_SRCDIR and JITTER_SRCDIR.
	* etc/hacking.org: Documentation: describe --jitter-srcdir=... in
	a correct context, also passing --gnulib-srcdir=... as required.

2022-01-18  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>

	* libpoke/pkl-typify.c (pkl_typify1_ps_type_struct): Disallow
	labels in pinned structs.
	* doc/poke.texi (Pinned Structs): Update.
	* testsuite/poke.pkl/scons-label-diag-1.pk: New test.
	* testsuite/Makefile.am (EXTRA_DIST): Update.

2022-01-18  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>

	* libpoke/pkl-typify.c (pkl_typify1_ps_type_struct): Disallow
	pinned unions.
	* doc/poke.texi (Unions): Update.
	* testsuite/poke.pkl/pinned-union-diag-1.pk: New test.
	* testsuite/Makefile.am (EXTRA_DIST): Update.

2022-01-18  Jose E. Marchesi  <jemarch@gnu.org>

	* testsuite/lib/poke-dg.exp (dg-require): Refer to etc/hacking.org
	instead of HACKING.

2022-01-18  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-diag.c (pkl_warning): Honor pkl_quiet_p for warning location.
	(pkl_warning): Do not handle
	pkl_error_on_warning here.
	* libpoke/pkl-anal.c (pkl_anal2_ps_struct_type_field): Do it here.
	(pkl_anal2_ps_type_struct): And here.
	* testsuite/poke.cmd/set-error-on-warning.pk: Do not test error
	case here.
	* testsuite/poke.cmd/set-error-on-warning-diag.pk: New test.
	* testsuite/Makefile.am (EXTRA_DIST): Add new test.

2022-01-17  Jose E. Marchesi  <jemarch@gnu.org>
