@@ -1786,7 +1786,7 @@ PKL_PHASE_END_HANDLER
 
    Pinned unions are not allowed.
 
-   Labels are not allowed in integral structs and pinned structs.
+   Labels are not allowed in integral structs, pinned structs and unions.
    Optional fields are not allowed in integral structs.  */
 
 PKL_PHASE_BEGIN_HANDLER (pkl_typify1_ps_type_struct)
@@ -1877,7 +1877,8 @@ PKL_PHASE_BEGIN_HANDLER (pkl_typify1_ps_type_struct)
       PKL_PASS_ERROR;
     }
 
-  if (PKL_AST_TYPE_S_PINNED_P (struct_type))
+  if (PKL_AST_TYPE_S_PINNED_P (struct_type)
+      || PKL_AST_TYPE_S_UNION_P (struct_type))
     {
       for (field = PKL_AST_TYPE_S_ELEMS (struct_type);
            field;
@@ -1889,7 +1890,10 @@ PKL_PHASE_BEGIN_HANDLER (pkl_typify1_ps_type_struct)
           if (PKL_AST_STRUCT_TYPE_FIELD_LABEL (field))
             {
               PKL_ERROR (PKL_AST_LOC (field),
-                         "labels are not allowed in pinned structs");
+                         "labels are not allowed in %s",
+                         PKL_AST_TYPE_S_PINNED_P (struct_type)
+                           ? "pinned structs"
+                           : "unions");
               PKL_TYPIFY_PAYLOAD->errors++;
               PKL_PASS_ERROR;
             }
