@@ -2057,6 +2057,7 @@ EXTRA_DIST = \
   poke.pkl/union-diag-6.pk \
   poke.pkl/union-diag-7.pk \
   poke.pkl/union-diag-8.pk \
+  poke.pkl/union-diag-9.pk \
   poke.pkl/union-pretty-print-1.pk \
   poke.pkl/units-1.pk \
   poke.pkl/units-2.pk \
